[package]
name = "rustwithdocker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dotenv = "0.15.0"
reqwest = "0.11"
scraper = "0.12"
serenity = "0.12.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
url = "2.2"
urlencoding = "2.0"
